--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "blog-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "type": "module",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node app.js",
-    "server": "nodemon app.js"
+    "start": "node src/server.js",
+    "server": "nodemon --exec ts-node-esm src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@swc/core": "^1.4.7",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/node": "^20.11.26",
+    "ts-node": "^10.9.2",
+    "ts-node-esm": "^0.0.6"
   }
 }
