--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.4.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "^20.11.26",
