--- a/package.json
+++ b/package.json
@@ -5,27 +5,24 @@
   "type": "module",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/server.js",
-    "server": "nodemon --exec ts-node-esm src/server.ts"
+    "start": "node dist/server.js",
+    "build": "tsc",
+    "server": "nodemon dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@swc/core": "^1.4.7",
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
+    "dotenv-extended": "^2.9.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.0.2",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/node": "^20.11.26",
-    "ts-node": "^10.9.2",
-    "ts-node-esm": "^0.0.6"
+    "@types/express-session": "^1.18.0"
   }
 }
